signing off page

--- a/SOPManagement/Views/Home/Contact.cshtml
+++ b/SOPManagement/Views/Home/Contact.cshtml
@@ -5,13 +5,12 @@
 <h3>@ViewBag.Message</h3>
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
+    Radiant Canada<br />
+    1280 Courtneypark Drive, Mississauga,ON<br />
     <abbr title="Phone">P:</abbr>
-    425.555.0100
+    905-602-2700
 </address>
 
 <address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Support:</strong>   <a href="mailto:it@radiantdelivers.com">Support@example.com</a><br />
 </address>
