--- a/SOPManagement/Views/Home/SignSOP.cshtml
+++ b/SOPManagement/Views/Home/SignSOP.cshtml
@@ -34,8 +34,10 @@
             <table>
 
                 <tr>
-                    <td>
+                    <td style="background-color:darkgray">
+
                         @Html.DisplayNameFor(model => model.SOPName)
+                    
                     </td>
                     <td>
                         @Model.SOPName
