completed change request and sign off pages May 7 2020

--- a/SOPManagement/Content/Site.css
+++ b/SOPManagement/Content/Site.css
@@ -61,3 +61,23 @@ textarea {
     opacity: .5;
 }
 
+.signoffield {
+    background-color: lightgray;
+    width: 30%;
+    font-weight: bold;
+}
+
+table {
+    border-collapse: collapse;
+    width:80%;
+}
+
+td, th {
+    border: 1px solid black;
+    padding:5px;
+    text-align:left
+}
+
+th {
+    background-color: lightgray;
+}
