--- a/SOPManagement/Views/Shared/_Layout.cshtml
+++ b/SOPManagement/Views/Shared/_Layout.cshtml
@@ -36,7 +36,7 @@
     <div class="container body-content">
         <div class="row">
             <div class="col-md-2"> <img src="~/Content/Images/RadiantLogo.jpg" /></div>
-            <div class="col-md-10" style="float:left"><h4> @ViewBag.Title </h4></div>
+            <div class="col-md-10" style="float:left"><h4><b> @ViewBag.Title </b></h4></div>
         </div>
         @RenderBody()
         <hr />
