--- a/SOPManagement/Content/Site.css
+++ b/SOPManagement/Content/Site.css
@@ -74,10 +74,11 @@ table {
 
 td, th {
     border: 1px solid black;
-    padding:5px;
-    text-align:left
+    padding: 5px;
+    text-align: left;
 }
 
 th {
     background-color: lightgray;
 }
+
