completed except admin May 11 2020

--- a/SOPManagement/Views/Home/SignSOP.cshtml
+++ b/SOPManagement/Views/Home/SignSOP.cshtml
@@ -367,4 +367,13 @@
         }
     }
 
+    $(document).ready(function () {
+        PrepAgrmntChckbox();
+    });
+    function PrepAgrmntChckbox() {
+        document.getElementById("chksignAgrmnt").checked = false;
+    }
+
+
+
 </script>
